# PromptExecute

./: .gitignore  Cargo.toml  README.md  base-rules.md  config.json.example  main.prompt  main.prompt.checksum  main.prompt.completed  main.prompt.output  main.prompt.prompt.checksum  main.py  pe.bat
src/: main.prompt  main.rs
