[package]
name = "PromptExecute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
md5 = "0.7.0"
reqwest = "0.11.18"
serde = "1.0.181"
serde_json = "1.0.104"
tokio = "1.29.1"
walkdir = "2.3.3"
